# trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  healthcheck.py  pyproject.toml  requirements.txt
app/: __init__.py  __main__.py  logging.py  main.py
app/admin_handlers/: bot.py
app/bot/: telegram_bot.py
app/coinex_spot/: __init__.py  client.py  time_source.py
app/config/: settings.py
app/core/: __init__.py  config.py  state.py
app/db/: __init__.py  models.py  session.py
app/demo/: perp_client.py  spot_client.py
app/errors/: __init__.py
app/exchange/: base.py  lbank_futures.py  lbank_spot.py
app/exchange_adapter/: __init__.py  base.py  ccxt_lbank.py  lbank_futures.py  lbank_futures_native.py  lbank_native.py  lbank_spot_native_adapter.py
app/http/: __init__.py  client.py
app/kucoin_spot/: __init__.py  client.py
app/lbank_perp/: __init__.py  client.py  time_source.py
app/lbank_spot/: __init__.py  client.py  time_source.py
app/mexc_perp/: __init__.py  demo_client.py
app/mexc_spot/: __init__.py  client.py  demo_client.py  time_source.py
app/okx_spot/: __init__.py  client.py  time_source.py
app/ratelimiter/: __init__.py  limiter.py
app/risk/: __init__.py  rules.py
app/signing/: __init__.py  coinex.py  kucoin.py  mexc.py  okx.py  signer.py
app/strategies/: grid_perp_btc.py  grid_spot.py  sample_perp.py  sample_spot.py
app/strategy/: futures_engine.py  logic.py  (+1 more)
app_legacy/: main.py
tests/: test_indicators.py  test_ratelimiter.py  test_signing.py  test_strategy.py
(+19 files in other folders)
