[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mexc-telegram-trader"
version = "0.1.0"
description = "Telegram trading bot for MEXC Spot (with optional LBank Perp sample)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "Bot Maintainer" }]
dependencies = [
  "aiogram>=3.4.1",
  "httpx>=0.27.0",
  "SQLAlchemy>=2.0.31",
  "aiosqlite>=0.20.0",
  "apscheduler>=3.10.4",
  "structlog>=24.1.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "cryptography>=43.0.0",
  "uvloop>=0.19.0; platform_system != 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "anyio>=4.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
